parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BREAK
    CONST
    POWER
    QUOTATION_MARKS
    RETURN

Grammar

Rule 0     S' -> programa
Rule 1     programa -> pacote importacao declaracaoGlobal funcoes_codigo
Rule 2     empty -> <empty>
Rule 3     pacote -> PACKAGE ID NEWLINE
Rule 4     importacao -> IMPORT ID NEWLINE importacao
Rule 5     importacao -> empty
Rule 6     declaracaoGlobal -> regrasDeclaracaoGlobal
Rule 7     declaracaoGlobal -> regrasDeclaracaoGlobal NEWLINE
Rule 8     declaracaoGlobal -> empty
Rule 9     regrasDeclaracaoGlobal -> declaracaoGlobalSimples
Rule 10    regrasDeclaracaoGlobal -> declaracaoEmLista
Rule 11    regrasDeclaracaoGlobal -> declaracaoEmListaEspacada
Rule 12    declaracaoGlobalSimples -> VAR tiposDeclaracoesGlobais
Rule 13    tiposDeclaracoesGlobais -> declaracaoGlobalSemValor
Rule 14    tiposDeclaracoesGlobais -> declaracaoGlobalComValor
Rule 15    declaracaoGlobalSemValor -> ID ID
Rule 16    declaracaoGlobalComValor -> ID ID EQUALS constante
Rule 17    declaracaoEmLista -> VAR BEG_PAREN listaGlobal END_PAREN
Rule 18    declaracaoEmListaEspacada -> VAR BEG_PAREN NEWLINE listaGlobal END_PAREN
Rule 19    listaGlobal -> tiposDeclaracoesGlobais
Rule 20    listaGlobal -> listaGlobalRecursiva
Rule 21    listaGlobal -> tiposDeclaracoesGlobais NEWLINE
Rule 22    listaGlobalRecursiva -> tiposDeclaracoesGlobais NEWLINE listaGlobal
Rule 23    funcoes_codigo -> funcao delimitador funcoes_codigo
Rule 24    funcoes_codigo -> funcao
Rule 25    funcoes_codigo -> empty
Rule 26    funcao -> FUNC ID BEG_PAREN lista_parametros END_PAREN tipo_retorno BEG_BRACE codigo END_BRACE
Rule 27    tipo_retorno -> ID
Rule 28    tipo_retorno -> empty
Rule 29    codigo -> lista_estruturas
Rule 30    lista_estruturas -> lista_estruturas estruturasBase
Rule 31    lista_estruturas -> empty
Rule 32    estruturasBase -> estruturas delimitador
Rule 33    estruturasBase -> NEWLINE
Rule 34    estruturas -> atribuicao
Rule 35    estruturas -> declaracao
Rule 36    estruturas -> estrutura_if
Rule 37    estruturas -> estrutura_for
Rule 38    estruturas -> unario
Rule 39    estruturas -> chamadaFuncao
Rule 40    delimitador -> NEWLINE
Rule 41    delimitador -> SEMICOLON
Rule 42    expressao -> and
Rule 43    expressao -> or
Rule 44    expressao -> expressao_n2
Rule 45    and -> expressao AMPERSAND AMPERSAND expressao_n2
Rule 46    or -> expressao PIPE PIPE expressao_n2
Rule 47    expressao_n2 -> equals
Rule 48    expressao_n2 -> different
Rule 49    expressao_n2 -> greater
Rule 50    expressao_n2 -> less
Rule 51    expressao_n2 -> greater_or_equal
Rule 52    expressao_n2 -> less_or_equal
Rule 53    expressao_n2 -> expressao_n3
Rule 54    equals -> expressao_n2 EQUALS EQUALS expressao_n3
Rule 55    different -> expressao_n3 DIFFERENT expressao_n3
Rule 56    greater -> expressao_n2 GREATER expressao_n3
Rule 57    less -> expressao_n2 LESS expressao_n3
Rule 58    greater_or_equal -> expressao_n2 GREATER EQUALS expressao_n3
Rule 59    less_or_equal -> expressao_n2 LESS EQUALS expressao_n3
Rule 60    expressao_n3 -> soma
Rule 61    expressao_n3 -> sub
Rule 62    expressao_n3 -> expressao_n4
Rule 63    soma -> expressao_n3 PLUS expressao_n4
Rule 64    sub -> expressao_n3 MINUS expressao_n4
Rule 65    expressao_n4 -> mult
Rule 66    expressao_n4 -> div
Rule 67    expressao_n4 -> mod
Rule 68    expressao_n4 -> expressao_n5
Rule 69    mult -> expressao_n4 TIMES expressao_n5
Rule 70    mod -> expressao_n4 MOD expressao_n5
Rule 71    div -> expressao_n4 DIVISION expressao_n5
Rule 72    expressao_n5 -> unario
Rule 73    expressao_n5 -> operando
Rule 74    expressao_n5 -> negation
Rule 75    unario -> incremento
Rule 76    unario -> decremento
Rule 77    unario -> pre_incremento
Rule 78    unario -> pre_decremento
Rule 79    negation -> EXCLAMATION operando
Rule 80    incremento -> ID INCREMENT
Rule 81    pre_incremento -> INCREMENT ID
Rule 82    decremento -> ID DECREMENT
Rule 83    pre_decremento -> DECREMENT ID
Rule 84    operando -> identificador
Rule 85    operando -> constante
Rule 86    operando -> chamadaFuncao
Rule 87    operando -> expParenteses
Rule 88    constante -> NUMBER
Rule 89    constante -> STRING
Rule 90    constante -> TRUE
Rule 91    constante -> FALSE
Rule 92    identificador -> ID
Rule 93    expParenteses -> BEG_PAREN expressao END_PAREN
Rule 94    estrutura_for -> for_CLIKE
Rule 95    estrutura_for -> for_infinito
Rule 96    estrutura_for -> for_while
Rule 97    for_CLIKE -> FOR declaracao SEMICOLON expressao SEMICOLON expressao BEG_BRACE codigo END_BRACE
Rule 98    for_infinito -> FOR BEG_BRACE codigo END_BRACE
Rule 99    for_while -> FOR expressao BEG_BRACE codigo END_BRACE
Rule 100   estrutura_if -> IF expressao BEG_BRACE codigo END_BRACE estrutura_else
Rule 101   estrutura_if -> IF expressao BEG_BRACE codigo END_BRACE
Rule 102   estrutura_else -> ELSE BEG_BRACE codigo END_BRACE
Rule 103   estrutura_else -> ELSE estrutura_if
Rule 104   atribuicao -> lista_identificadores EQUALS lista_valores
Rule 105   atribuicao -> expressao_matematica_reduzida
Rule 106   expressao_matematica_reduzida -> assign_plus
Rule 107   expressao_matematica_reduzida -> assign_minus
Rule 108   expressao_matematica_reduzida -> assign_mult
Rule 109   expressao_matematica_reduzida -> assign_div
Rule 110   assign_plus -> ID PLUS EQUALS expressao
Rule 111   assign_minus -> ID MINUS EQUALS expressao
Rule 112   assign_mult -> ID TIMES EQUALS expressao
Rule 113   assign_div -> ID DIVISION EQUALS expressao
Rule 114   declaracao -> lista_identificadores COLON EQUALS lista_valores
Rule 115   chamadaFuncao -> ID BEG_PAREN lista_parametros END_PAREN
Rule 116   lista_parametros -> lista_identificadores
Rule 117   lista_parametros -> empty
Rule 118   lista_identificadores -> lista_identificadores COMMA ID
Rule 119   lista_identificadores -> ID
Rule 120   lista_valores -> lista_valores COMMA expressao
Rule 121   lista_valores -> expressao

Terminals, with rules where they appear

AMPERSAND            : 45 45
BEG_BRACE            : 26 97 98 99 100 101 102
BEG_PAREN            : 17 18 26 93 115
BREAK                : 
COLON                : 114
COMMA                : 118 120
CONST                : 
DECREMENT            : 82 83
DIFFERENT            : 55
DIVISION             : 71 113
ELSE                 : 102 103
END_BRACE            : 26 97 98 99 100 101 102
END_PAREN            : 17 18 26 93 115
EQUALS               : 16 54 54 58 59 104 110 111 112 113 114
EXCLAMATION          : 79
FALSE                : 91
FOR                  : 97 98 99
FUNC                 : 26
GREATER              : 56 58
ID                   : 3 4 15 15 16 16 26 27 80 81 82 83 92 110 111 112 113 115 118 119
IF                   : 100 101
IMPORT               : 4
INCREMENT            : 80 81
LESS                 : 57 59
MINUS                : 64 111
MOD                  : 70
NEWLINE              : 3 4 7 18 21 22 33 40
NUMBER               : 88
PACKAGE              : 3
PIPE                 : 46 46
PLUS                 : 63 110
POWER                : 
QUOTATION_MARKS      : 
RETURN               : 
SEMICOLON            : 41 97 97
STRING               : 89
TIMES                : 69 112
TRUE                 : 90
VAR                  : 12 17 18
error                : 

Nonterminals, with rules where they appear

and                  : 42
assign_div           : 109
assign_minus         : 107
assign_mult          : 108
assign_plus          : 106
atribuicao           : 34
chamadaFuncao        : 39 86
codigo               : 26 97 98 99 100 101 102
constante            : 16 85
declaracao           : 35 97
declaracaoEmLista    : 10
declaracaoEmListaEspacada : 11
declaracaoGlobal     : 1
declaracaoGlobalComValor : 14
declaracaoGlobalSemValor : 13
declaracaoGlobalSimples : 9
decremento           : 76
delimitador          : 23 32
different            : 48
div                  : 66
empty                : 5 8 25 28 31 117
equals               : 47
estrutura_else       : 100
estrutura_for        : 37
estrutura_if         : 36 103
estruturas           : 32
estruturasBase       : 30
expParenteses        : 87
expressao            : 45 46 93 97 97 99 100 101 110 111 112 113 120 121
expressao_matematica_reduzida : 105
expressao_n2         : 44 45 46 54 56 57 58 59
expressao_n3         : 53 54 55 55 56 57 58 59 63 64
expressao_n4         : 62 63 64 69 70 71
expressao_n5         : 68 69 70 71
for_CLIKE            : 94
for_infinito         : 95
for_while            : 96
funcao               : 23 24
funcoes_codigo       : 1 23
greater              : 49
greater_or_equal     : 51
identificador        : 84
importacao           : 1 4
incremento           : 75
less                 : 50
less_or_equal        : 52
listaGlobal          : 17 18 22
listaGlobalRecursiva : 20
lista_estruturas     : 29 30
lista_identificadores : 104 114 116 118
lista_parametros     : 26 115
lista_valores        : 104 114 120
mod                  : 67
mult                 : 65
negation             : 74
operando             : 73 79
or                   : 43
pacote               : 1
pre_decremento       : 78
pre_incremento       : 77
programa             : 0
regrasDeclaracaoGlobal : 6 7
soma                 : 60
sub                  : 61
tipo_retorno         : 26
tiposDeclaracoesGlobais : 12 19 21 22
unario               : 38 72

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . pacote importacao declaracaoGlobal funcoes_codigo
    (3) pacote -> . PACKAGE ID NEWLINE

    PACKAGE         shift and go to state 3

    programa                       shift and go to state 1
    pacote                         shift and go to state 2

state 1

    (0) S' -> programa .



state 2

    (1) programa -> pacote . importacao declaracaoGlobal funcoes_codigo
    (4) importacao -> . IMPORT ID NEWLINE importacao
    (5) importacao -> . empty
    (2) empty -> .

    IMPORT          shift and go to state 5
    VAR             reduce using rule 2 (empty -> .)
    FUNC            reduce using rule 2 (empty -> .)
    $end            reduce using rule 2 (empty -> .)

    importacao                     shift and go to state 4
    empty                          shift and go to state 6

state 3

    (3) pacote -> PACKAGE . ID NEWLINE

    ID              shift and go to state 7


state 4

    (1) programa -> pacote importacao . declaracaoGlobal funcoes_codigo
    (6) declaracaoGlobal -> . regrasDeclaracaoGlobal
    (7) declaracaoGlobal -> . regrasDeclaracaoGlobal NEWLINE
    (8) declaracaoGlobal -> . empty
    (9) regrasDeclaracaoGlobal -> . declaracaoGlobalSimples
    (10) regrasDeclaracaoGlobal -> . declaracaoEmLista
    (11) regrasDeclaracaoGlobal -> . declaracaoEmListaEspacada
    (2) empty -> .
    (12) declaracaoGlobalSimples -> . VAR tiposDeclaracoesGlobais
    (17) declaracaoEmLista -> . VAR BEG_PAREN listaGlobal END_PAREN
    (18) declaracaoEmListaEspacada -> . VAR BEG_PAREN NEWLINE listaGlobal END_PAREN

    FUNC            reduce using rule 2 (empty -> .)
    $end            reduce using rule 2 (empty -> .)
    VAR             shift and go to state 14

    declaracaoGlobal               shift and go to state 8
    regrasDeclaracaoGlobal         shift and go to state 9
    empty                          shift and go to state 10
    declaracaoGlobalSimples        shift and go to state 11
    declaracaoEmLista              shift and go to state 12
    declaracaoEmListaEspacada      shift and go to state 13

state 5

    (4) importacao -> IMPORT . ID NEWLINE importacao

    ID              shift and go to state 15


state 6

    (5) importacao -> empty .

    VAR             reduce using rule 5 (importacao -> empty .)
    FUNC            reduce using rule 5 (importacao -> empty .)
    $end            reduce using rule 5 (importacao -> empty .)


state 7

    (3) pacote -> PACKAGE ID . NEWLINE

    NEWLINE         shift and go to state 16


state 8

    (1) programa -> pacote importacao declaracaoGlobal . funcoes_codigo
    (23) funcoes_codigo -> . funcao delimitador funcoes_codigo
    (24) funcoes_codigo -> . funcao
    (25) funcoes_codigo -> . empty
    (26) funcao -> . FUNC ID BEG_PAREN lista_parametros END_PAREN tipo_retorno BEG_BRACE codigo END_BRACE
    (2) empty -> .

    FUNC            shift and go to state 20
    $end            reduce using rule 2 (empty -> .)

    funcoes_codigo                 shift and go to state 17
    funcao                         shift and go to state 18
    empty                          shift and go to state 19

state 9

    (6) declaracaoGlobal -> regrasDeclaracaoGlobal .
    (7) declaracaoGlobal -> regrasDeclaracaoGlobal . NEWLINE

    FUNC            reduce using rule 6 (declaracaoGlobal -> regrasDeclaracaoGlobal .)
    $end            reduce using rule 6 (declaracaoGlobal -> regrasDeclaracaoGlobal .)
    NEWLINE         shift and go to state 21


state 10

    (8) declaracaoGlobal -> empty .

    FUNC            reduce using rule 8 (declaracaoGlobal -> empty .)
    $end            reduce using rule 8 (declaracaoGlobal -> empty .)


state 11

    (9) regrasDeclaracaoGlobal -> declaracaoGlobalSimples .

    NEWLINE         reduce using rule 9 (regrasDeclaracaoGlobal -> declaracaoGlobalSimples .)
    FUNC            reduce using rule 9 (regrasDeclaracaoGlobal -> declaracaoGlobalSimples .)
    $end            reduce using rule 9 (regrasDeclaracaoGlobal -> declaracaoGlobalSimples .)


state 12

    (10) regrasDeclaracaoGlobal -> declaracaoEmLista .

    NEWLINE         reduce using rule 10 (regrasDeclaracaoGlobal -> declaracaoEmLista .)
    FUNC            reduce using rule 10 (regrasDeclaracaoGlobal -> declaracaoEmLista .)
    $end            reduce using rule 10 (regrasDeclaracaoGlobal -> declaracaoEmLista .)


state 13

    (11) regrasDeclaracaoGlobal -> declaracaoEmListaEspacada .

    NEWLINE         reduce using rule 11 (regrasDeclaracaoGlobal -> declaracaoEmListaEspacada .)
    FUNC            reduce using rule 11 (regrasDeclaracaoGlobal -> declaracaoEmListaEspacada .)
    $end            reduce using rule 11 (regrasDeclaracaoGlobal -> declaracaoEmListaEspacada .)


state 14

    (12) declaracaoGlobalSimples -> VAR . tiposDeclaracoesGlobais
    (17) declaracaoEmLista -> VAR . BEG_PAREN listaGlobal END_PAREN
    (18) declaracaoEmListaEspacada -> VAR . BEG_PAREN NEWLINE listaGlobal END_PAREN
    (13) tiposDeclaracoesGlobais -> . declaracaoGlobalSemValor
    (14) tiposDeclaracoesGlobais -> . declaracaoGlobalComValor
    (15) declaracaoGlobalSemValor -> . ID ID
    (16) declaracaoGlobalComValor -> . ID ID EQUALS constante

    BEG_PAREN       shift and go to state 23
    ID              shift and go to state 26

    tiposDeclaracoesGlobais        shift and go to state 22
    declaracaoGlobalSemValor       shift and go to state 24
    declaracaoGlobalComValor       shift and go to state 25

state 15

    (4) importacao -> IMPORT ID . NEWLINE importacao

    NEWLINE         shift and go to state 27


state 16

    (3) pacote -> PACKAGE ID NEWLINE .

    IMPORT          reduce using rule 3 (pacote -> PACKAGE ID NEWLINE .)
    VAR             reduce using rule 3 (pacote -> PACKAGE ID NEWLINE .)
    FUNC            reduce using rule 3 (pacote -> PACKAGE ID NEWLINE .)
    $end            reduce using rule 3 (pacote -> PACKAGE ID NEWLINE .)


state 17

    (1) programa -> pacote importacao declaracaoGlobal funcoes_codigo .

    $end            reduce using rule 1 (programa -> pacote importacao declaracaoGlobal funcoes_codigo .)


state 18

    (23) funcoes_codigo -> funcao . delimitador funcoes_codigo
    (24) funcoes_codigo -> funcao .
    (40) delimitador -> . NEWLINE
    (41) delimitador -> . SEMICOLON

    $end            reduce using rule 24 (funcoes_codigo -> funcao .)
    NEWLINE         shift and go to state 29
    SEMICOLON       shift and go to state 30

    delimitador                    shift and go to state 28

state 19

    (25) funcoes_codigo -> empty .

    $end            reduce using rule 25 (funcoes_codigo -> empty .)


state 20

    (26) funcao -> FUNC . ID BEG_PAREN lista_parametros END_PAREN tipo_retorno BEG_BRACE codigo END_BRACE

    ID              shift and go to state 31


state 21

    (7) declaracaoGlobal -> regrasDeclaracaoGlobal NEWLINE .

    FUNC            reduce using rule 7 (declaracaoGlobal -> regrasDeclaracaoGlobal NEWLINE .)
    $end            reduce using rule 7 (declaracaoGlobal -> regrasDeclaracaoGlobal NEWLINE .)


state 22

    (12) declaracaoGlobalSimples -> VAR tiposDeclaracoesGlobais .

    NEWLINE         reduce using rule 12 (declaracaoGlobalSimples -> VAR tiposDeclaracoesGlobais .)
    FUNC            reduce using rule 12 (declaracaoGlobalSimples -> VAR tiposDeclaracoesGlobais .)
    $end            reduce using rule 12 (declaracaoGlobalSimples -> VAR tiposDeclaracoesGlobais .)


state 23

    (17) declaracaoEmLista -> VAR BEG_PAREN . listaGlobal END_PAREN
    (18) declaracaoEmListaEspacada -> VAR BEG_PAREN . NEWLINE listaGlobal END_PAREN
    (19) listaGlobal -> . tiposDeclaracoesGlobais
    (20) listaGlobal -> . listaGlobalRecursiva
    (21) listaGlobal -> . tiposDeclaracoesGlobais NEWLINE
    (13) tiposDeclaracoesGlobais -> . declaracaoGlobalSemValor
    (14) tiposDeclaracoesGlobais -> . declaracaoGlobalComValor
    (22) listaGlobalRecursiva -> . tiposDeclaracoesGlobais NEWLINE listaGlobal
    (15) declaracaoGlobalSemValor -> . ID ID
    (16) declaracaoGlobalComValor -> . ID ID EQUALS constante

    NEWLINE         shift and go to state 33
    ID              shift and go to state 26

    listaGlobal                    shift and go to state 32
    tiposDeclaracoesGlobais        shift and go to state 34
    listaGlobalRecursiva           shift and go to state 35
    declaracaoGlobalSemValor       shift and go to state 24
    declaracaoGlobalComValor       shift and go to state 25

state 24

    (13) tiposDeclaracoesGlobais -> declaracaoGlobalSemValor .

    NEWLINE         reduce using rule 13 (tiposDeclaracoesGlobais -> declaracaoGlobalSemValor .)
    FUNC            reduce using rule 13 (tiposDeclaracoesGlobais -> declaracaoGlobalSemValor .)
    $end            reduce using rule 13 (tiposDeclaracoesGlobais -> declaracaoGlobalSemValor .)
    END_PAREN       reduce using rule 13 (tiposDeclaracoesGlobais -> declaracaoGlobalSemValor .)


state 25

    (14) tiposDeclaracoesGlobais -> declaracaoGlobalComValor .

    NEWLINE         reduce using rule 14 (tiposDeclaracoesGlobais -> declaracaoGlobalComValor .)
    FUNC            reduce using rule 14 (tiposDeclaracoesGlobais -> declaracaoGlobalComValor .)
    $end            reduce using rule 14 (tiposDeclaracoesGlobais -> declaracaoGlobalComValor .)
    END_PAREN       reduce using rule 14 (tiposDeclaracoesGlobais -> declaracaoGlobalComValor .)


state 26

    (15) declaracaoGlobalSemValor -> ID . ID
    (16) declaracaoGlobalComValor -> ID . ID EQUALS constante

    ID              shift and go to state 36


state 27

    (4) importacao -> IMPORT ID NEWLINE . importacao
    (4) importacao -> . IMPORT ID NEWLINE importacao
    (5) importacao -> . empty
    (2) empty -> .

    IMPORT          shift and go to state 5
    VAR             reduce using rule 2 (empty -> .)
    FUNC            reduce using rule 2 (empty -> .)
    $end            reduce using rule 2 (empty -> .)

    importacao                     shift and go to state 37
    empty                          shift and go to state 6

state 28

    (23) funcoes_codigo -> funcao delimitador . funcoes_codigo
    (23) funcoes_codigo -> . funcao delimitador funcoes_codigo
    (24) funcoes_codigo -> . funcao
    (25) funcoes_codigo -> . empty
    (26) funcao -> . FUNC ID BEG_PAREN lista_parametros END_PAREN tipo_retorno BEG_BRACE codigo END_BRACE
    (2) empty -> .

    FUNC            shift and go to state 20
    $end            reduce using rule 2 (empty -> .)

    funcao                         shift and go to state 18
    funcoes_codigo                 shift and go to state 38
    empty                          shift and go to state 19

state 29

    (40) delimitador -> NEWLINE .

    FUNC            reduce using rule 40 (delimitador -> NEWLINE .)
    $end            reduce using rule 40 (delimitador -> NEWLINE .)
    NEWLINE         reduce using rule 40 (delimitador -> NEWLINE .)
    IF              reduce using rule 40 (delimitador -> NEWLINE .)
    ID              reduce using rule 40 (delimitador -> NEWLINE .)
    FOR             reduce using rule 40 (delimitador -> NEWLINE .)
    INCREMENT       reduce using rule 40 (delimitador -> NEWLINE .)
    DECREMENT       reduce using rule 40 (delimitador -> NEWLINE .)
    END_BRACE       reduce using rule 40 (delimitador -> NEWLINE .)


state 30

    (41) delimitador -> SEMICOLON .

    FUNC            reduce using rule 41 (delimitador -> SEMICOLON .)
    $end            reduce using rule 41 (delimitador -> SEMICOLON .)
    NEWLINE         reduce using rule 41 (delimitador -> SEMICOLON .)
    IF              reduce using rule 41 (delimitador -> SEMICOLON .)
    ID              reduce using rule 41 (delimitador -> SEMICOLON .)
    FOR             reduce using rule 41 (delimitador -> SEMICOLON .)
    INCREMENT       reduce using rule 41 (delimitador -> SEMICOLON .)
    DECREMENT       reduce using rule 41 (delimitador -> SEMICOLON .)
    END_BRACE       reduce using rule 41 (delimitador -> SEMICOLON .)


state 31

    (26) funcao -> FUNC ID . BEG_PAREN lista_parametros END_PAREN tipo_retorno BEG_BRACE codigo END_BRACE

    BEG_PAREN       shift and go to state 39


state 32

    (17) declaracaoEmLista -> VAR BEG_PAREN listaGlobal . END_PAREN

    END_PAREN       shift and go to state 40


state 33

    (18) declaracaoEmListaEspacada -> VAR BEG_PAREN NEWLINE . listaGlobal END_PAREN
    (19) listaGlobal -> . tiposDeclaracoesGlobais
    (20) listaGlobal -> . listaGlobalRecursiva
    (21) listaGlobal -> . tiposDeclaracoesGlobais NEWLINE
    (13) tiposDeclaracoesGlobais -> . declaracaoGlobalSemValor
    (14) tiposDeclaracoesGlobais -> . declaracaoGlobalComValor
    (22) listaGlobalRecursiva -> . tiposDeclaracoesGlobais NEWLINE listaGlobal
    (15) declaracaoGlobalSemValor -> . ID ID
    (16) declaracaoGlobalComValor -> . ID ID EQUALS constante

    ID              shift and go to state 26

    listaGlobal                    shift and go to state 41
    tiposDeclaracoesGlobais        shift and go to state 34
    listaGlobalRecursiva           shift and go to state 35
    declaracaoGlobalSemValor       shift and go to state 24
    declaracaoGlobalComValor       shift and go to state 25

state 34

    (19) listaGlobal -> tiposDeclaracoesGlobais .
    (21) listaGlobal -> tiposDeclaracoesGlobais . NEWLINE
    (22) listaGlobalRecursiva -> tiposDeclaracoesGlobais . NEWLINE listaGlobal

    END_PAREN       reduce using rule 19 (listaGlobal -> tiposDeclaracoesGlobais .)
    NEWLINE         shift and go to state 42


state 35

    (20) listaGlobal -> listaGlobalRecursiva .

    END_PAREN       reduce using rule 20 (listaGlobal -> listaGlobalRecursiva .)


state 36

    (15) declaracaoGlobalSemValor -> ID ID .
    (16) declaracaoGlobalComValor -> ID ID . EQUALS constante

    NEWLINE         reduce using rule 15 (declaracaoGlobalSemValor -> ID ID .)
    FUNC            reduce using rule 15 (declaracaoGlobalSemValor -> ID ID .)
    $end            reduce using rule 15 (declaracaoGlobalSemValor -> ID ID .)
    END_PAREN       reduce using rule 15 (declaracaoGlobalSemValor -> ID ID .)
    EQUALS          shift and go to state 43


state 37

    (4) importacao -> IMPORT ID NEWLINE importacao .

    VAR             reduce using rule 4 (importacao -> IMPORT ID NEWLINE importacao .)
    FUNC            reduce using rule 4 (importacao -> IMPORT ID NEWLINE importacao .)
    $end            reduce using rule 4 (importacao -> IMPORT ID NEWLINE importacao .)


state 38

    (23) funcoes_codigo -> funcao delimitador funcoes_codigo .

    $end            reduce using rule 23 (funcoes_codigo -> funcao delimitador funcoes_codigo .)


state 39

    (26) funcao -> FUNC ID BEG_PAREN . lista_parametros END_PAREN tipo_retorno BEG_BRACE codigo END_BRACE
    (116) lista_parametros -> . lista_identificadores
    (117) lista_parametros -> . empty
    (118) lista_identificadores -> . lista_identificadores COMMA ID
    (119) lista_identificadores -> . ID
    (2) empty -> .

    ID              shift and go to state 44
    END_PAREN       reduce using rule 2 (empty -> .)

    lista_parametros               shift and go to state 45
    lista_identificadores          shift and go to state 46
    empty                          shift and go to state 47

state 40

    (17) declaracaoEmLista -> VAR BEG_PAREN listaGlobal END_PAREN .

    NEWLINE         reduce using rule 17 (declaracaoEmLista -> VAR BEG_PAREN listaGlobal END_PAREN .)
    FUNC            reduce using rule 17 (declaracaoEmLista -> VAR BEG_PAREN listaGlobal END_PAREN .)
    $end            reduce using rule 17 (declaracaoEmLista -> VAR BEG_PAREN listaGlobal END_PAREN .)


state 41

    (18) declaracaoEmListaEspacada -> VAR BEG_PAREN NEWLINE listaGlobal . END_PAREN

    END_PAREN       shift and go to state 48


state 42

    (21) listaGlobal -> tiposDeclaracoesGlobais NEWLINE .
    (22) listaGlobalRecursiva -> tiposDeclaracoesGlobais NEWLINE . listaGlobal
    (19) listaGlobal -> . tiposDeclaracoesGlobais
    (20) listaGlobal -> . listaGlobalRecursiva
    (21) listaGlobal -> . tiposDeclaracoesGlobais NEWLINE
    (13) tiposDeclaracoesGlobais -> . declaracaoGlobalSemValor
    (14) tiposDeclaracoesGlobais -> . declaracaoGlobalComValor
    (22) listaGlobalRecursiva -> . tiposDeclaracoesGlobais NEWLINE listaGlobal
    (15) declaracaoGlobalSemValor -> . ID ID
    (16) declaracaoGlobalComValor -> . ID ID EQUALS constante

    END_PAREN       reduce using rule 21 (listaGlobal -> tiposDeclaracoesGlobais NEWLINE .)
    ID              shift and go to state 26

    tiposDeclaracoesGlobais        shift and go to state 34
    listaGlobal                    shift and go to state 49
    listaGlobalRecursiva           shift and go to state 35
    declaracaoGlobalSemValor       shift and go to state 24
    declaracaoGlobalComValor       shift and go to state 25

state 43

    (16) declaracaoGlobalComValor -> ID ID EQUALS . constante
    (88) constante -> . NUMBER
    (89) constante -> . STRING
    (90) constante -> . TRUE
    (91) constante -> . FALSE

    NUMBER          shift and go to state 51
    STRING          shift and go to state 52
    TRUE            shift and go to state 53
    FALSE           shift and go to state 54

    constante                      shift and go to state 50

state 44

    (119) lista_identificadores -> ID .

    COMMA           reduce using rule 119 (lista_identificadores -> ID .)
    END_PAREN       reduce using rule 119 (lista_identificadores -> ID .)


state 45

    (26) funcao -> FUNC ID BEG_PAREN lista_parametros . END_PAREN tipo_retorno BEG_BRACE codigo END_BRACE

    END_PAREN       shift and go to state 55


state 46

    (116) lista_parametros -> lista_identificadores .
    (118) lista_identificadores -> lista_identificadores . COMMA ID

    END_PAREN       reduce using rule 116 (lista_parametros -> lista_identificadores .)
    COMMA           shift and go to state 56


state 47

    (117) lista_parametros -> empty .

    END_PAREN       reduce using rule 117 (lista_parametros -> empty .)


state 48

    (18) declaracaoEmListaEspacada -> VAR BEG_PAREN NEWLINE listaGlobal END_PAREN .

    NEWLINE         reduce using rule 18 (declaracaoEmListaEspacada -> VAR BEG_PAREN NEWLINE listaGlobal END_PAREN .)
    FUNC            reduce using rule 18 (declaracaoEmListaEspacada -> VAR BEG_PAREN NEWLINE listaGlobal END_PAREN .)
    $end            reduce using rule 18 (declaracaoEmListaEspacada -> VAR BEG_PAREN NEWLINE listaGlobal END_PAREN .)


state 49

    (22) listaGlobalRecursiva -> tiposDeclaracoesGlobais NEWLINE listaGlobal .

    END_PAREN       reduce using rule 22 (listaGlobalRecursiva -> tiposDeclaracoesGlobais NEWLINE listaGlobal .)


state 50

    (16) declaracaoGlobalComValor -> ID ID EQUALS constante .

    NEWLINE         reduce using rule 16 (declaracaoGlobalComValor -> ID ID EQUALS constante .)
    FUNC            reduce using rule 16 (declaracaoGlobalComValor -> ID ID EQUALS constante .)
    $end            reduce using rule 16 (declaracaoGlobalComValor -> ID ID EQUALS constante .)
    END_PAREN       reduce using rule 16 (declaracaoGlobalComValor -> ID ID EQUALS constante .)


state 51

    (88) constante -> NUMBER .

    NEWLINE         reduce using rule 88 (constante -> NUMBER .)
    FUNC            reduce using rule 88 (constante -> NUMBER .)
    $end            reduce using rule 88 (constante -> NUMBER .)
    END_PAREN       reduce using rule 88 (constante -> NUMBER .)
    TIMES           reduce using rule 88 (constante -> NUMBER .)
    DIVISION        reduce using rule 88 (constante -> NUMBER .)
    MOD             reduce using rule 88 (constante -> NUMBER .)
    DIFFERENT       reduce using rule 88 (constante -> NUMBER .)
    PLUS            reduce using rule 88 (constante -> NUMBER .)
    MINUS           reduce using rule 88 (constante -> NUMBER .)
    EQUALS          reduce using rule 88 (constante -> NUMBER .)
    GREATER         reduce using rule 88 (constante -> NUMBER .)
    LESS            reduce using rule 88 (constante -> NUMBER .)
    BEG_BRACE       reduce using rule 88 (constante -> NUMBER .)
    AMPERSAND       reduce using rule 88 (constante -> NUMBER .)
    PIPE            reduce using rule 88 (constante -> NUMBER .)
    COMMA           reduce using rule 88 (constante -> NUMBER .)
    SEMICOLON       reduce using rule 88 (constante -> NUMBER .)


state 52

    (89) constante -> STRING .

    NEWLINE         reduce using rule 89 (constante -> STRING .)
    FUNC            reduce using rule 89 (constante -> STRING .)
    $end            reduce using rule 89 (constante -> STRING .)
    END_PAREN       reduce using rule 89 (constante -> STRING .)
    TIMES           reduce using rule 89 (constante -> STRING .)
    DIVISION        reduce using rule 89 (constante -> STRING .)
    MOD             reduce using rule 89 (constante -> STRING .)
    DIFFERENT       reduce using rule 89 (constante -> STRING .)
    PLUS            reduce using rule 89 (constante -> STRING .)
    MINUS           reduce using rule 89 (constante -> STRING .)
    EQUALS          reduce using rule 89 (constante -> STRING .)
    GREATER         reduce using rule 89 (constante -> STRING .)
    LESS            reduce using rule 89 (constante -> STRING .)
    BEG_BRACE       reduce using rule 89 (constante -> STRING .)
    AMPERSAND       reduce using rule 89 (constante -> STRING .)
    PIPE            reduce using rule 89 (constante -> STRING .)
    COMMA           reduce using rule 89 (constante -> STRING .)
    SEMICOLON       reduce using rule 89 (constante -> STRING .)


state 53

    (90) constante -> TRUE .
